{
  "version": 4,
  "terraform_version": "0.12.17",
  "serial": 50,
  "lineage": "668c23d1-eb23-288a-4700-4ae4511681b0",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_elb",
      "name": "terra-elb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:536285340728:loadbalancer/terra-elb",
            "availability_zones": [
              "us-east-1a",
              "us-east-1b"
            ],
            "connection_draining": true,
            "connection_draining_timeout": 300,
            "cross_zone_load_balancing": true,
            "dns_name": "terra-elb-1877843358.us-east-1.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 2,
                "interval": 30,
                "target": "HTTP:80/index.html",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "terra-elb",
            "idle_timeout": 100,
            "instances": [
              "i-0ae5d9dbb559a679a",
              "i-0cf656ed7243b04df"
            ],
            "internal": false,
            "listener": [
              {
                "instance_port": 80,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              }
            ],
            "name": "terra-elb",
            "security_groups": [
              "sg-08d92a956dc87139e"
            ],
            "source_security_group": "536285340728/allow_http",
            "source_security_group_id": "sg-08d92a956dc87139e",
            "subnets": [
              "subnet-00a5abf9f4ae525a1",
              "subnet-0827e2c14bd928382"
            ],
            "tags": {
              "Name": "terraform-elb"
            },
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_instance.webservers",
            "aws_security_group.webservers",
            "aws_subnet.public",
            "aws_vpc.terra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "webservers",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00d4e9ff62bc40e03",
            "arn": "arn:aws:ec2:us-east-1:536285340728:instance/i-0ae5d9dbb559a679a",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0ae5d9dbb559a679a",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "monitoring": false,
            "primary_network_interface_id": "eni-0cb2f9f669f4bbc79",
            "private_dns": "ip-10-20-1-98.ec2.internal",
            "private_ip": "10.20.1.98",
            "public_ip": "34.201.171.6",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-049f29b5d66f02401",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-08d92a956dc87139e"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0827e2c14bd928382",
            "tags": {
              "Name": "Server-0"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-08d92a956dc87139e"
            ]
          },
          "dependencies": [
            "aws_security_group.webservers",
            "aws_subnet.public",
            "aws_vpc.terra_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00d4e9ff62bc40e03",
            "arn": "arn:aws:ec2:us-east-1:536285340728:instance/i-0cf656ed7243b04df",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0cf656ed7243b04df",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "monitoring": false,
            "primary_network_interface_id": "eni-06124bb379fe43922",
            "private_dns": "ip-10-20-2-202.ec2.internal",
            "private_ip": "10.20.2.202",
            "public_ip": "18.206.135.185",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-00e16d3c5f084a56b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-08d92a956dc87139e"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00a5abf9f4ae525a1",
            "tags": {
              "Name": "Server-1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-08d92a956dc87139e"
            ]
          },
          "dependencies": [
            "aws_security_group.webservers",
            "aws_subnet.public",
            "aws_vpc.terra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "terra_igw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0bc62937e81fe1a7e",
            "owner_id": "536285340728",
            "tags": {
              "Name": "main"
            },
            "vpc_id": "vpc-08c124ae8eacdd30b"
          },
          "dependencies": [
            "aws_vpc.terra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0b6ff7fe52cc99382",
            "owner_id": "536285340728",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0bc62937e81fe1a7e",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "publicRouteTable"
            },
            "vpc_id": "vpc-08c124ae8eacdd30b"
          },
          "dependencies": [
            "aws_internet_gateway.terra_igw",
            "aws_vpc.terra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-029dfb9f8a7a35578",
            "route_table_id": "rtb-0b6ff7fe52cc99382",
            "subnet_id": "subnet-0827e2c14bd928382"
          },
          "dependencies": [
            "aws_internet_gateway.terra_igw",
            "aws_route_table.public_rt",
            "aws_subnet.public",
            "aws_vpc.terra_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04148592578e604a7",
            "route_table_id": "rtb-0b6ff7fe52cc99382",
            "subnet_id": "subnet-00a5abf9f4ae525a1"
          },
          "dependencies": [
            "aws_internet_gateway.terra_igw",
            "aws_route_table.public_rt",
            "aws_subnet.public",
            "aws_vpc.terra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "webservers",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:536285340728:security-group/sg-08d92a956dc87139e",
            "description": "Allow http inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08d92a956dc87139e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow_http",
            "name_prefix": null,
            "owner_id": "536285340728",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-08c124ae8eacdd30b"
          },
          "dependencies": [
            "aws_vpc.terra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:536285340728:subnet/subnet-0827e2c14bd928382",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.20.1.0/24",
            "id": "subnet-0827e2c14bd928382",
            "map_public_ip_on_launch": true,
            "owner_id": "536285340728",
            "tags": {
              "Name": "Subnet-0"
            },
            "vpc_id": "vpc-08c124ae8eacdd30b"
          },
          "dependencies": [
            "aws_vpc.terra_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:536285340728:subnet/subnet-00a5abf9f4ae525a1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.20.2.0/24",
            "id": "subnet-00a5abf9f4ae525a1",
            "map_public_ip_on_launch": true,
            "owner_id": "536285340728",
            "tags": {
              "Name": "Subnet-1"
            },
            "vpc_id": "vpc-08c124ae8eacdd30b"
          },
          "dependencies": [
            "aws_vpc.terra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "terra_vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:536285340728:vpc/vpc-08c124ae8eacdd30b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.20.0.0/16",
            "default_network_acl_id": "acl-0cbfff213c2fc827d",
            "default_route_table_id": "rtb-0b73d0cbe4ff1c5f6",
            "default_security_group_id": "sg-0a3a68a92790793a0",
            "dhcp_options_id": "dopt-1ed7e366",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-08c124ae8eacdd30b",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0b73d0cbe4ff1c5f6",
            "owner_id": "536285340728",
            "tags": {
              "Name": "TerraVPC"
            }
          }
        }
      ]
    }
  ]
}